force-app/main/default/objects/Shipping_Address__c/Shipping_Address__c.object-meta.xml
<CustomObject>
    <description>Related Addresses to a Subscriber Household or Business</description>
    <label>Shipping Address</label>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>Shipping Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>