force-app/main/default/objects/Shipping_Address__c/fields/Address_City__c.field-meta.xml
<CustomField>
        <fullName>Address_City__c</fullName>
        <label>Address-City</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>