force-app/main/default/objects/Shipping_Address__c/fields/Address_State__c.field-meta.xml
<CustomField>
        <fullName>Address_State__c</fullName>
        <label>Address-State</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>