force-app/main/default/objects/Shipping_Address__c/fields/Address_Street2__c.field-meta.xml
<CustomField>
        <fullName>Address_Street2__c</fullName>
        <label>Address-Street2</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>