force-app/main/default/objects/Shipping_Address__c/fields/Ascending__c.field-meta.xml
<CustomField>
        <fullName>Ascending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ascending</label>
        <type>Checkbox</type>
    </CustomField>