force-app/main/default/objects/Shipping_Address__c/fields/Census_Tract__c.field-meta.xml
<CustomField>
        <fullName>Census_Tract__c</fullName>
        <label>Census Tract</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>