force-app/main/default/objects/Shipping_Address__c/fields/Geo_Segment_ID__c.field-meta.xml
<CustomField>
        <fullName>Geo_Segment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Geo Segment ID</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>