force-app/main/default/objects/Shipping_Address__c/fields/Latitude__c.field-meta.xml
<CustomField>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>