force-app/main/default/objects/Shipping_Address__c/fields/Never_Scrub__c.field-meta.xml
<CustomField>
        <fullName>Never_Scrub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Scrub</label>
        <type>Checkbox</type>
    </CustomField>