force-app/main/default/objects/Shipping_Address__c/fields/Subscriber_Account__c.field-meta.xml
<CustomField>
        <fullName>Subscriber_Account__c</fullName>
        <label>Subscriber Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Addresses</relationshipLabel>
        <relationshipName>Shipping_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </CustomField>