force-app/main/default/objects/Shipping_Address__c/fields/Supplemental__c.field-meta.xml
<CustomField>
        <fullName>Supplemental__c</fullName>
        <label>Supplemental</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>