force-app/main/default/objects/Shipping_Address__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>